fix: remove non 98 standard functions

--- a/module_00/ex00/Makefile
+++ b/module_00/ex00/Makefile
@@ -2,7 +2,7 @@ NAME	=	megaphone
 SRC 	=	Megaphone.cpp
 SRC 	+=	MegaString.cpp
 CC		=	c++
-FLAGS	=	-std=c++98 -Wall -Wextra -Werror
+FLAGS	=	-std=c++98 -pedantic -Wall -Wextra -Werror
 
 all:	$(NAME)
 
