--- a/module_01/ex02/Makefile
+++ b/module_01/ex02/Makefile
@@ -4,7 +4,7 @@ SRC		+=	Zombie.class.cpp
 
 INCLUDE	+=	Zombie.class.hpp
 
-CPPC		=	c++
+CPPC		=	c++-13
 CPPC_FLAGS	=	-Wall -Wextra -Werror -Wpedantic -std=c++98
 
 all: $(NAME)
