--- a/module_01/ex03/Makefile
+++ b/module_01/ex03/Makefile
@@ -5,7 +5,7 @@ SRC		+=	HumanB.class.cpp
 
 INCLUDE	+=	$(SRC:%.cpp=%.hpp)
 
-CPPC		=	c++
+CPPC		=	c++-13
 CPPC_FLAGS	=	-Wall -Wextra -Werror -Wpedantic -std=c++98
 
 all: $(NAME)
