--- a/module_01/ex02/Makefile
+++ b/module_01/ex02/Makefile
@@ -1,15 +1,12 @@
 NAME		=	zombie
 SRC		+=	main.cpp
-SRC		+=	Zombie.class.cpp
-
-INCLUDE	+=	Zombie.class.hpp
 
 CPPC		=	c++-13
 CPPC_FLAGS	=	-Wall -Wextra -Werror -Wpedantic -std=c++98
 
 all: $(NAME)
 
-$(NAME):	$(SRC) $(INCLUDE)
+$(NAME):	$(SRC)
 	$(CPPC) $(CPPC_FLAGS) -o $(NAME) $(SRC)
 
 fclean:
